--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -294,12 +294,13 @@ aside .list li.current {
   background-image: -o-linear-gradient(top , #39abe1 25% , #1984c2 100%);
   background-image: linear-gradient(top , #39abe1 25% , #1984c2 100%);
 }
-aside .list li strong {
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+aside .list li strong,
+aside .list li small,
+aside .list li .icon {
   color: #fff;
 }
-aside .list li small {
-  color: #fff;
+aside .list li strong {
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
 /* @end */
 /* @group widgets */
