Free load resources :)

--- a/src/stylesheets/Lungo.layout.nav.less
+++ b/src/stylesheets/Lungo.layout.nav.less
@@ -10,7 +10,7 @@
 @import "constants.less";
 @import "mixins.less";
 
-nav {
+header nav, footer nav {
     height: auto;
     text-align: center;
 
