--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -102,18 +102,19 @@ section[data-transition="slide"] {
   transform: translatex(100%);
   visibility: visible !important;
 }
-section[data-transition="slide"]:not(.show) > header > * {
+section[data-transition="slide"]  > header > *,
+section[data-transition="slide"]  > article > * {
   opacity: 0;
-  -webkit-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -moz-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -ms-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -o-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -webkit-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -moz-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -ms-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  -o-transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
-  transition: opacity 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -webkit-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -webkit-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -moz-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -ms-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  -o-transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 section[data-transition="slide"]:first-child,
 section[data-transition="slide"].show {
@@ -129,7 +130,9 @@ section[data-transition="slide"].show {
   transform: translatex(0%);
 }
 section[data-transition="slide"]:first-child  > header > *,
-section[data-transition="slide"].show  > header > * {
+section[data-transition="slide"].show  > header > *,
+section[data-transition="slide"]:first-child  > article > *,
+section[data-transition="slide"].show  > article > * {
   opacity: 1;
 }
 section[data-transition="slide"].hide {
@@ -144,7 +147,8 @@ section[data-transition="slide"].hide {
   -o-transform: translatex(-100%);
   transform: translatex(-100%);
 }
-section[data-transition="slide"].hide  > header > * {
+section[data-transition="slide"].hide  > header > *,
+section[data-transition="slide"].hide  > article > * {
   opacity: 0;
 }
 section[data-transition="cover"] {
