Fix import of mixins.less

--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -7,10 +7,8 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "mixins.less";
 @import "constants.less";
-
-@import "lungo.theme.default.font.less";
+// @import "lungo.theme.default.font.less";
 
 
 @theme: #2A95D3;
