--- a/src/stylesheets/Lungo.widgets.splash.less
+++ b/src/stylesheets/Lungo.widgets.splash.less
@@ -6,7 +6,7 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-
+@import "constants.less";
 .splash{
     text-align: center;
     font-size: 1.2em;
