--- a/src/stylesheets/css/Lungo.widgets.loading.css
+++ b/src/stylesheets/css/Lungo.widgets.loading.css
@@ -6,6 +6,8 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
+/* DIMENSIONS */
+/* COLORS */
 .loading {
   position: relative;
   left: 50%;
