--- a/src/stylesheets/css/Lungo.widgets.splash.css
+++ b/src/stylesheets/css/Lungo.widgets.splash.css
@@ -6,6 +6,8 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
+/* DIMENSIONS */
+/* COLORS */
 .splash {
   text-align: center;
   font-size: 1.2em;
