--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -29,6 +29,10 @@ article {
         z-index: 1;
     }
 
+    &.pull {
+        .transition(all 300ms @defaultTrasition);
+    }
+
     & .text {
         margin: 4px 0 8px;
         display: block;
