--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -88,10 +88,8 @@ footer nav a.current {
 
 footer nav a, nav.groupbar a{
     color: rgba(0,0,0,0.7);
-    .text-shadow(0 1px 0 rgba(255,255,255,0.1));
     &.current {
-        color:  #fff;
-        text-shadow: 0 0 1px #fff;}
+        color:  #fff;}
 }
 
 nav.groupbar a.current { .box-shadow(inset 0 -3px 0 @theme); }
